[package]
name = "orpheus"
version = "0.1.9"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = "0.6.1"

tokio = { version = "1.47.1", features = ["rt-multi-thread"] }
dotenvy = "0.15.7"
serde = "1.0.228"
serde_json = "1.0.145"
chrono = "0.4.42"
regex = "1.11.3"
base64 = "0.22.1"
rand = "0.9.2"

datadog-tracing = "0.3.0"
tracing = "0.1.40"

[dependencies.serenity]
default-features = false
features = [
"builder",
"client",
"gateway",
"model",
"utils",
"collector",
"framework",
]
version = "0.12.4"
